--- a/Samples.html
+++ b/Samples.html
@@ -4,7 +4,7 @@
 <body>
 
   <!--<div ng-app="">
-    <p>Let's add a bit of text here</p>
+    <p>Add a bit of text here</p>
     <p>Name: <input type="text" ng-model="name"></p>
     Using "ng-bind" directive: <p ng-bind="name"></p>
     This is using the expression: <p>{{name}}</p>
